feat: Refactor user_titles to memeber_titles
